WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129417
compile fix when not using TEXTURE_MAPPER_GL
https://bugs.webkit.org/show_bug.cgi?id=129417
Summary
compile fix when not using TEXTURE_MAPPER_GL
Alex Christensen
Reported
2014-02-26 21:26:57 PST
Having two definitions for platformCreateAccelerated has caused compiler errors for ports not using TEXTURE_MAPPER_GL, such as WinCairo. I suggest the definitions be moved to the same place. Also, should WinCairo be using TEXTURE_MAPPER_GL for anything?
Attachments
Patch
(2.16 KB, patch)
2014-02-26 21:28 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(2.35 KB, patch)
2014-02-26 22:27 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.20 KB, patch)
2014-02-27 11:20 PST
,
Alex Christensen
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2014-02-26 21:28:13 PST
Created
attachment 225342
[details]
Patch
Alex Christensen
Comment 2
2014-02-26 22:27:39 PST
Created
attachment 225344
[details]
Patch
Alex Christensen
Comment 3
2014-02-27 11:20:05 PST
Created
attachment 225396
[details]
Patch
Alex Christensen
Comment 4
2014-02-27 14:43:27 PST
committed to
http://trac.webkit.org/changeset/164825
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug