Compile fix when not using TEXTURE_MAPPER_GL. https://bugs.webkit.org/show_bug.cgi?id=129417

Reviewed by Darin Adler.

* platform/graphics/texmap/TextureMapperGL.cpp:
Protect platformCreateAccelerated with USE(TEXTURE_MAPPER_GL).



Canonical link: https://commits.webkit.org/147512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164825 268f45cc-cd09-0410-ab3c-d52691b4dbfc